final-publication-53-60.log
file:///home/runner/work/where-horses-run/where-horses-run/scripts/apply-pub-53-60.mjs:116
6. PR #325 must merge without \`[CF-Pages-Skip]`, followed by one production-deployment confirmation.`;
                                                  ^^^^^^^^

SyntaxError: Missing initializer in const declaration
    at compileSourceTextModule (node:internal/modules/esm/utils:338:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:102:18)
    at #translate (node:internal/modules/esm/loader:437:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:484:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:115:19)

Node.js v22.12.0
